--- a/app/src/main/res/layout/activity_detalle_contacto.xml
+++ b/app/src/main/res/layout/activity_detalle_contacto.xml
@@ -23,11 +23,10 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/nombre"
+            android:id="@+id/dnombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/nombre"
-            />
+            android:text="@string/name" />
 
 
         <TextView
