--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/name"
+            android:id="@+id/maname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="14dp"
@@ -42,7 +42,7 @@
 
 
         <EditText
-            android:id="@+id/telf"
+            android:id="@+id/matelf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="14dp"
@@ -57,7 +57,7 @@
             android:textSize="14sp" />
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/maemail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="14dp"
@@ -72,7 +72,7 @@
             android:textSize="14sp" />
 
         <EditText
-            android:id="@+id/descripcion"
+            android:id="@+id/madescripcion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="14dp"
